绘制三条不同颜色和宽度的平行线

--- a/绘制三条不同颜色和宽度的平行线.html
+++ b/绘制三条不同颜色和宽度的平行线.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>三条</title>
     <style>
         canvas {
             border: 1px solid red;
@@ -23,14 +23,35 @@
         var ctx = myCanvas.getContext('2d');
 
         // 画平行线
+        ctx.beginPath(); //开启新路径,能够解决样式覆盖问题
+        // 蓝色10px
         ctx.moveTo(100, 100.5);
         ctx.lineTo(300, 100.5);
 
+        ctx.lineWidth = 10;
+        ctx.strokeStyle = 'blue';
+        // 描边
+        ctx.stroke();
+
+        // 红色20px
+        ctx.beginPath(); //开启新路径
         ctx.moveTo(100, 200.5);
         ctx.lineTo(300, 200.5);
-
+        ctx.lineWidth = 20;
+        ctx.strokeStyle = 'red';
         // 描边
-        ctx.stroke()
+        ctx.stroke();
+
+        // 黄色30px
+        ctx.beginPath(); //开启新路径
+        ctx.moveTo(100, 300.5);
+        ctx.lineTo(300, 300.5);
+        ctx.lineWidth = 30;
+        ctx.strokeStyle = 'yellow';
+        // 描边
+        ctx.stroke();
+
+
 
 
 
