--- a/绘制坐标系.html
+++ b/绘制坐标系.html
@@ -57,7 +57,7 @@
         ctx.lineTo(space, space)
         ctx.stroke()
 
-
+        // 绘制箭头
         ctx.lineTo(space + arrowSize / 2, space + arrowSize)
         ctx.lineTo(space - arrowSize / 2, space + arrowSize)
         ctx.lineTo(space, space)
