--- a/绘制点.html
+++ b/绘制点.html
@@ -20,6 +20,26 @@
     <script>
         var myCanvas = document.querySelector('canvas');
         var ctx = myCanvas.getContext('2d')
+
+        // 1.绘制点
+        // 2.点的尺寸
+        // 3.以坐标中心绘制点
+
+        // 绘制点的坐标
+        var coordinate = {
+            x: 100,
+            y: 100,
+        }
+
+        // 围绕着这个坐标绘制一个点
+        var dottedSize = 6
+        ctx.moveTo(coordinate.x - dottedSize / 2, coordinate.y - dottedSize / 2)
+        ctx.lineTo(coordinate.x + dottedSize / 2, coordinate.y - dottedSize / 2)
+        ctx.lineTo(coordinate.x + dottedSize / 2, coordinate.y + dottedSize / 2)
+        ctx.lineTo(coordinate.x - dottedSize / 2, coordinate.y + dottedSize / 2)
+        ctx.closePath()
+
+        ctx.fill()
     </script>
 </body>
 
