--- a/绘制折线图.html
+++ b/绘制折线图.html
@@ -22,9 +22,29 @@
         var ctx = myCanvas.getContext('2d')
 
         // 1.构造函数，构造函数首字母要大写
-        var LineChart = function() {
+        var LineChart = function(ctx) {
             // 获取绘图工具
             this.ctx = ctx || document.querySelector('canvas').getContext('2d'); //用户在没传用户工具的情况下，自己获取绘制工具
+
+            // 画布的大小
+            this.canvasWidth = this.ctx.canvas.width;
+            this.canvasHeight = this.ctx.canvas.height;
+
+            // 网格的大小
+            this.gridSize = 10;
+
+            // 坐标系的间距
+            this.space = 20;
+
+            // 箭头的大小
+            this.arrowSize = 10;
+
+            // 绘制点
+            this.dottedSize = 6;
+
+            // 点的坐标 和数据有关系 数据可视化
+
+
         };
         // 2.行为方法
         LineChart.prototype.init = {
