--- a/绘制折线图.html
+++ b/绘制折线图.html
@@ -18,8 +18,8 @@
     <canvas width="600" height="400"></canvas>
 
     <script>
-        var myCanvas = document.querySelector('canvas');
-        var ctx = myCanvas.getContext('2d')
+        // var myCanvas = document.querySelector('canvas');
+        // var ctx = myCanvas.getContext('2d')
 
         // 1.构造函数，构造函数首字母要大写
         var LineChart = function(ctx) {
@@ -47,11 +47,62 @@
 
         };
         // 2.行为方法
-        LineChart.prototype.init = {
+
+        // 初始化行为
+        LineChart.prototype.init = function() {
+            this.drawGrid();
+            this.drawAxis();
+            this.drawDotted(data);
+        };
+        // 绘制网格
+        LineChart.prototype.drawGrid = function() {
+            // x方向的线
+            var xLineTotal = Math.floor(this.canvasHeight / this.gridSize);
+            this.ctx.strokeStyle = '#eee'
+            for (var i = 0; i <= xLineTotal; i++) {
+                this.ctx.beginPath();
+                this.ctx.moveTo(0, i * this.gridSize - 0.5);
+                this.ctx.lineTo(this.canvasWidth, i * this.gridSize - 0.5);
+                this.ctx.stroke()
+            }
+            // y方向的线
+            var yLineTotal = Math.floor(this.canvasWidth / this.gridSize);
+            for (var i = 0; i <= yLineTotal; i++) {
+                this.ctx.beginPath();
+                this.ctx.moveTo(i * this.gridSize - 0.5, 0);
+                this.ctx.lineTo(i * this.gridSize - 0.5, this.canvasWidth);
+                this.ctx.stroke()
+            }
+        };
+        // 绘制坐标系
+        LineChart.prototype.drawAxis = function() {
+
+        };
+        // 绘制所有的点
+        LineChart.prototype.drawDotted = function() {
 
         };
         // 3.初始化
-        new LineChart()
+        var data = [{
+            x: 100,
+            y: 120
+        }, {
+            x: 200,
+            y: 160
+        }, {
+            x: 300,
+            y: 240
+        }, {
+            x: 400,
+            y: 320
+        }, {
+            x: 500,
+            y: 80
+        }]
+
+        var linechart = new LineChart();
+        // 在构造函数初始化的时候传入值
+        linechart.init(data);
     </script>
 </body>
 
