弧度的介绍

--- a/绘制渐变矩形.html
+++ b/绘制渐变矩形.html
@@ -38,7 +38,7 @@
 
         // 回想线性渐变--->要求 方向 、可以用角度表示方向、 起始颜色 结束颜色
 
-        // canvas的渐变方向是通过两个点的坐标控制
+        // canvas的渐变方向是通过两个点的坐标控制,还可以直接斜线方向，还有镜像渐变createRadialGradient
     </script>
 </body>
 
