--- a/圆弧/绘制在画布中心的一段文字.html
+++ b/圆弧/绘制在画布中心的一段文字.html
@@ -41,7 +41,7 @@
         ctx.stroke();
 
         // 5.绘制文本  //绘制文本的时候起点在左下角
-        // 有文本的属性可以设置 字体 尺寸 左右对齐的方式 垂直对齐的方式
+        // 有文本的属性可以设置 字体 尺寸 左右对齐的方式 垂直对齐的方式 nihao
         ctx.beginPath();
         ctx.strokeStyle = "#000";
         ctx.font = '30px Microsoft YaHei'
