--- a/圆弧/绘制在画布中心的一段文字.html
+++ b/圆弧/绘制在画布中心的一段文字.html
@@ -40,7 +40,7 @@
         ctx.lineTo(w / 2, h);
         ctx.stroke();
 
-        // 5.绘制文本  //绘制文本的时候起点在左下角
+        // 5.绘制文本  //绘制文本的时候起点在左下角 dudu 
         // 有文本的属性可以设置 字体 尺寸 左右对齐的方式 垂直对齐的方式 nihao
         ctx.beginPath();
         ctx.strokeStyle = "#000";
