--- a/圆弧/绘制在画布中心的一段文字.html
+++ b/圆弧/绘制在画布中心的一段文字.html
@@ -50,6 +50,9 @@
         ctx.textAlign = 'center'
 
         // ctx.direction = 'rtl';
+        // ctx.textBaseline 垂直对齐方式  设置基线
+        // top 文本的基线处于文字的正上方，并且有一段距离
+
 
         // ctx.strokeText(str, w / 2, h / 2);
         ctx.fillText(str, w / 2, h / 2);
