--- a/绘制图片/绘制图片的三种方式.html
+++ b/绘制图片/绘制图片的三种方式.html
@@ -31,11 +31,26 @@
         // 必须等图片加载完毕
         // 绑定加载完成事件
         img.onload = function() {
-            console.log(img)
-                // 一定可以加载完毕
+            console.log(img);
+            // 一定可以加载完毕
+            // 绘制图片的三种方式
+            // 3参数  图片对象  绘制在canvas上的坐标 x y
+            // ctx.drawImage(img, 100, 100)
+
+            // 5个参数 图片对象  绘制在canvas上的坐标 x y  图片大小，不是裁剪，是缩放
+            // ctx.drawImage(img, 100, 100, 100, 100)
+
+            // 9个参数
+            // 图片对象  
+            // 图片上的定位坐标 x y  
+            // 在图片上截取多大的区域 w h 
+            // 绘制在画布上的坐标
+            // 图片的大小,不是裁剪,是缩放
+            ctx.drawImage(img, 400, 400, 200, 400, 100, 100, 100, 100)
+
         };
         // 设置图片路径
-        img.src = "image/00.jpeg"
+        img.src = "image/01.jpg"
     </script>
 </body>
 
