--- a/绘制图片/绘制图片的三种方式.html
+++ b/绘制图片/绘制图片的三种方式.html
@@ -45,7 +45,7 @@
             // 图片上的定位坐标 x y  
             // 在图片上截取多大的区域 w h 
             // 绘制在画布上的坐标
-            // 图片的大小,不是裁剪,是缩放
+            // 图片的大小,不是裁剪,是缩放年后上的
             ctx.drawImage(img, 400, 400, 200, 400, 100, 100, 100, 100)
 
         };
