--- a/绘制折线图/绘制点.html
+++ b/绘制折线图/绘制点.html
@@ -31,7 +31,7 @@
             y: 100,
         }
 
-        // 围绕着这个坐标绘制一个点
+        // 围绕着这个坐标绘制一个点的打开打开
         var dottedSize = 6
         ctx.moveTo(coordinate.x - dottedSize / 2, coordinate.y - dottedSize / 2)
         ctx.lineTo(coordinate.x + dottedSize / 2, coordinate.y - dottedSize / 2)
