绘制帧动画

--- a/绘制折线图/绘制点.html
+++ b/绘制折线图/绘制点.html
@@ -18,6 +18,7 @@
     <canvas width="600" height="400"></canvas>
 
     <script>
+        // 获取画布
         var myCanvas = document.querySelector('canvas');
         var ctx = myCanvas.getContext('2d')
 
