--- a/绘制图片/方向键控制的行走的小人.html
+++ b/绘制图片/方向键控制的行走的小人.html
@@ -29,6 +29,7 @@
 
         var Person = function() {
 
+
         }
 
         Person.prototype.init = function() {
@@ -47,6 +48,7 @@
 
 
             };
+            img.src = "image/01.jpg"
         }
     </script>
 </body>
