--- a/绘制折线图/绘制点.html
+++ b/绘制折线图/绘制点.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- 1.准备画布 -->
+    <!-- 1.准备画布 canvas只是一个容器 -->
     <canvas width="600" height="400"></canvas>
 
     <script>
